Fix line spacing, change comment border outline

--- a/portfolio/src/main/webapp/blogStyle.css
+++ b/portfolio/src/main/webapp/blogStyle.css
@@ -257,11 +257,10 @@ html {
   .comment {
     padding: 10px 30px 10px 30px;
     margin: 20px 50px 20px 50px;
-    border: 1px solid #bdb8d7;
+    border: 1px solid  #e0e4e8;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
     border-radius: 25px;
   }
-
 
   .comment .username {
     color: #000;
@@ -292,3 +291,4 @@ html {
     transition: all 0.5s;
     cursor: pointer;
   }
+  
